Loads the keys from classpath. Fixes the issue of keys not loading after exporting the jar.